# cleanup

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: debug.yml
src/: args.rs  error.rs  images.rs  instances.rs  lib.rs  main.rs  options.rs  out.rs  snapshots.rs  volumes.rs
src/aws/: image.rs  mod.rs  snapshot.rs  volume.rs
