[package]
name = "cleanup"
version = "0.4.1"
edition = "2021"
authors = ["Pablo COVES <pablo.coves@protonmail.com>"]
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
aws-config     = { version = "0.15"                                        }
aws-sdk-ec2    = { version = "0.15"                                        }

chrono         = { version = "0.4"                                         }
clap           = { version = "3", features = ["derive"]                    }
futures        = { version = "0.3"                                         }
thiserror      = { version = "1"                                           }
tokio          = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
chrono        = { version = "0.4"                      }
clap          = { version = "3", features = ["derive"] }
clap_complete = { version = "3"                        }
